[gd_scene load_steps=6 format=2]

[ext_resource path="res://aux_tscn/Folower.gd" type="Script" id=1]
[ext_resource path="res://textures/png/Enemy.png" type="Texture" id=2]
[ext_resource path="res://aux_tscn/WanderController.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 17.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.513, 9.55014 )

[node name="Folower" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Platform_Detector" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 20 )

[node name="Floor_Detector_Right" type="RayCast2D" parent="."]
position = Vector2( 11, 0 )
cast_to = Vector2( 0, 20 )

[node name="Floor_Detector_Left" type="RayCast2D" parent="."]
position = Vector2( -11, 0 )
cast_to = Vector2( 0, 20 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
position = Vector2( 0, -13.0813 )
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="WanderController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="WanderController"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
